[gd_scene load_steps=8 format=3 uid="uid://cgnf5iywlcnm"]

[ext_resource type="Script" path="res://gamemode/game_selection.gd" id="1_4ceev"]

[sub_resource type="GDScript" id="GDScript_ql431"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	self.text = str(GlobalData.setting.x01.score)

"

[sub_resource type="GDScript" id="GDScript_2g8ei"]
script/source = "extends CheckBox


# Called when the node enters the scene tree for the first time.
func _ready():
	self.button_pressed = GlobalData.setting.x01.double_in
"

[sub_resource type="GDScript" id="GDScript_5ude1"]
script/source = "extends CheckBox


# Called when the node enters the scene tree for the first time.
func _ready():
	self.button_pressed = GlobalData.setting.x01.double_out
"

[sub_resource type="GDScript" id="GDScript_clbhg"]
script/source = "extends CheckBox


# Called when the node enters the scene tree for the first time.
func _ready():
	self.button_pressed = GlobalData.setting.x01.show_check_out
"

[sub_resource type="GDScript" id="GDScript_pllxq"]
script/source = "extends SpinBox


# Called when the node enters the scene tree for the first time.
func _ready():
	var leg = GlobalData.setting.x01.total_leg
	if leg > 100:
		self.editable = false
	else:
		self.value = leg
"

[sub_resource type="GDScript" id="GDScript_mg10t"]
script/source = "extends SpinBox


# Called when the node enters the scene tree for the first time.
func _ready():
	self.value = GlobalData.setting.x01.total_set

"

[node name="GameSelection" type="Control" node_paths=PackedStringArray("selected_grid", "unselected_grid", "split_container", "x01_Canvas_Layer", "x01_Gamemode_Button", "x01_Spin_Box")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ceev")
selected_grid = NodePath("MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer2/MarginContainer/ScrollContainer/GCSelectedPlayer")
unselected_grid = NodePath("MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/GCUnselectedPlayer")
split_container = NodePath("MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer")
x01_Canvas_Layer = NodePath("MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer")
x01_Gamemode_Button = NodePath("MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01")
x01_Spin_Box = NodePath("MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/SpinBox")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameModeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "X01"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonX01" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "501
"
script = SubResource("GDScript_ql431")

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01"]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer"]
offset_left = 64.0
offset_top = 160.0
offset_right = 448.0
offset_bottom = 366.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="X01Button" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "101"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "170"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "301"

[node name="Button4" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "501"

[node name="Button5" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1001"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
keep_pressed_outside = true
text = "Double-In"
alignment = 1
expand_icon = true
script = SubResource("GDScript_2g8ei")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
keep_pressed_outside = true
text = "Double-Out"
alignment = 1
expand_icon = true
script = SubResource("GDScript_5ude1")

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
keep_pressed_outside = true
text = "Show Check-Out"
alignment = 1
expand_icon = true
script = SubResource("GDScript_clbhg")

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Leg"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
rounded = true
alignment = 1
script = SubResource("GDScript_pllxq")

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Inf"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2
text = "Set"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer2/VBoxContainer"]
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
max_value = 10.0
rounded = true
alignment = 1
script = SubResource("GDScript_mg10t")

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "PLAY"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer2"]
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer3"]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/GameModeContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer4"]
layout_mode = 2

[node name="PlayerContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlayerContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer/PanelContainer2"]
layout_mode = 2
text = "vs. Player"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer2/MarginContainer2/PanelContainer2"]
layout_mode = 2
text = "vs. Computer"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2"]
layout_mode = 2
split_offset = 400
dragger_visibility = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Selected Players"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="GCSelectedPlayer" type="GridContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer2/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 20
text = "Player List:"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="GCUnselectedPlayer" type="GridContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="AddPlayer" type="Button" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2
size_flags_horizontal = 4
text = "Create a Player"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer2/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer2/PanelContainer2/HSeparator"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "TEST"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer2/PanelContainer2/HSeparator"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50
text = "TEST"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01" to="." method="_on_x01_button_pressed" binds= ["main"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button/Button" to="." method="_on_x01_button_pressed" binds= ["101"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button/Button2" to="." method="_on_x01_button_pressed" binds= ["170"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button/Button3" to="." method="_on_x01_button_pressed" binds= ["301"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button/Button4" to="." method="_on_x01_button_pressed" binds= ["501"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/ButtonX01/CanvasLayer/PanelContainer/MarginContainer/X01Button/Button5" to="." method="_on_x01_button_pressed" binds= ["1001"]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/CheckBox" to="." method="_on_x01_setting_pressed" binds= ["Double-In"]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer2/CheckBox" to="." method="_on_x01_setting_pressed" binds= ["Double-Out"]]
[connection signal="toggled" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer3/CheckBox" to="." method="_on_x01_setting_pressed" binds= ["Show Check-Out"]]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_X01_setting_input" binds= ["Leg"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_X01_setting_input" binds= [0.0, "Inf"]]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/MarginContainer4/HBoxContainer/CenterContainer2/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_X01_setting_input" binds= ["Set"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GameModeContainer/MarginContainer/PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed" binds= ["x01"]]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer2" to="." method="_on_v_box_container_2_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer" to="." method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer" to="." method="_on_v_box_container_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayerContainer/MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MarginContainer/PanelContainer2/VSplitContainer/VBoxContainer/MarginContainer/ScrollContainer/VBoxContainer/AddPlayer" to="." method="_on_add_player_pressed"]
